--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+const pageTitle = "ホームページ";
 ---
 
 <html lang="ja">
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>{pageTitle}</title>
   </head>
   <body>
 
@@ -16,6 +16,6 @@
     <a href="/about/">概要</a>
     <a href="/blog/">ブログ</a>
 
-    <h1>Astroを使ってみよう</h1>
+    <h1>{pageTitle}</h1>
   </body>
 </html>
