--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import '@acab/reset.css';
 import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
 
 const pageTitle = "私について";
 
@@ -43,9 +44,7 @@ const textCase = "uppercase";
   </head>
   <body>
 
-    <a href="/">ホーム</a>
-    <a href="/about/">概要</a>
-    <a href="/blog/">ブログ</a>
+    <Navigation />
 
     <h1>{pageTitle}</h1>
     <h2>... そして私の新しいAstroサイトについて！</h2>
