--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import '@acab/reset.css';
 import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
 
 const pageTitle = "ホームページ";
 ---
@@ -15,9 +16,7 @@ const pageTitle = "ホームページ";
   </head>
   <body>
 
-    <a href="/">ホーム</a>
-    <a href="/about/">概要</a>
-    <a href="/blog/">ブログ</a>
+    <Navigation />
 
     <h1>{pageTitle}</h1>
   </body>
