--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,6 +2,7 @@
 import '@acab/reset.css';
 import '../styles/global.css';
 import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 
 const pageTitle = "私のAstro学習ブログ";
 ---
@@ -25,5 +26,7 @@ const pageTitle = "私のAstro学習ブログ";
       <li><a href="/posts/post-2">ブログ記事2</a></li>
       <li><a href="/posts/post-3">ブログ記事3</a></li>
     </ul>
+
+    <Footer />
   </body>
 </html>
