--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import '@acab/reset.css';
 import '../styles/global.css';
 import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 
 const pageTitle = "ホームページ";
 ---
@@ -19,5 +20,7 @@ const pageTitle = "ホームページ";
     <Navigation />
 
     <h1>{pageTitle}</h1>
+
+    <Footer />
   </body>
 </html>
