--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,7 @@
 ---
 import '@acab/reset.css';
 import '../styles/global.css';
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
 const pageTitle = "私のAstro学習ブログ";
@@ -17,7 +17,7 @@ const pageTitle = "私のAstro学習ブログ";
   </head>
   <body>
 
-    <Navigation />
+    <Header />
 
     <h1>{pageTitle}</h1>
     <p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
