--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import '@acab/reset.css';
 import '../styles/global.css';
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
 const pageTitle = "ホームページ";
@@ -17,7 +17,7 @@ const pageTitle = "ホームページ";
   </head>
   <body>
 
-    <Navigation />
+    <Header />
 
     <h1>{pageTitle}</h1>
 
