--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,5 +22,9 @@ const pageTitle = "ホームページ";
     <h1>{pageTitle}</h1>
 
     <Footer />
+
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
