--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,6 +22,12 @@ h1 {
   font-size: 2.5rem;
 }
 
+
+p {
+  font-size: 17px;
+  line-height: 1.6;
+}
+
 /* ナビゲーションのスタイル */
 .hamburger {
   padding-right: 20px;
