--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,3 +21,10 @@ const username = "H-Manny";
     <Social platform="youtube" username="astrodotbuild" />
   </div>
 </footer>
+
+<style>
+  footer {
+    border-block-start: solid 1px #cbdceb;
+    padding: 24px 16px;
+  }
+</style>
