--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,3 +10,10 @@ import Navigation from './Navigation.astro';
     <Navigation />
   </nav>
 </header>
+
+<style>
+  header {
+    border-block-end: solid 1px #cbdceb;
+    padding: 16px;
+  }
+</style>
