--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,8 @@
 ---
 import '@acab/reset.css';
 import '../styles/global.css';
+// Supports weights 100-900
+import '@fontsource-variable/noto-sans-jp';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
@@ -15,13 +17,15 @@ const { pageTitle } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
   </head>
-  <body>
-
+  <body class="dynamic-fixed-footer">
     <Header />
 
-    <h1>{pageTitle}</h1>
+    <main>
+      <h1>{pageTitle}</h1>
 
-    <slot />
+      <slot />
+
+    </main>
 
     <Footer />
 
