--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,31 +2,39 @@
   サイト全体にスタイルを適用
 */
 
-
 html {
-  background-color: #f1f5f9;
-  font-family: sans-serif;
+  block-size: 100%;
 }
 
 body {
   color: #333;
-  margin: 0 auto;
-  width: 100%;
-  max-width: 80ch;
-  padding: 1rem;
-  line-height: 1.5;
+  font-family: 'Noto Sans JP Variable', sans-serif;
+  font-size: 17px;
+  line-height: 1.6;
+  background-color: #f3f3e0;
+  inline-size: min(100% - 1rem, 80ch);
+  margin-inline: auto;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #133e87;
+  margin-block-end: 2rem;
 }
 
 h1 {
-  margin: 1rem 0;
   font-size: 2.5rem;
+  margin: 1rem 0;
 }
-
 
 p {
   font-size: 17px;
   line-height: 1.6;
 }
+
+a {
+  color: #608bc1;
+}
+
 
 /* ナビゲーションのスタイル */
 .hamburger {
@@ -52,18 +60,20 @@ p {
 }
 
 .nav-links a {
-  display: block;
-  text-align: center;
-  padding: 10px 0;
-  text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 18px;
   font-weight: bold;
+  text-align: center;
+  text-decoration: none;
   text-transform: uppercase;
+  padding-block: 12px;
+  display: block;
+  transition: all 130ms ease-in-out;
 }
 
 .nav-links a:hover,
 .nav-links a:focus {
-  background-color: #ff9776;
+  color: #f3f3e0;
+  background-color: #608bc1;
 }
 
 .expanded {
@@ -72,19 +82,27 @@ p {
 
 @media screen and (min-width: 636px) {
   .nav-links {
-    margin-left: 5em;
-    display: block;
-    position: static;
-    width: auto;
     background: none;
+    inline-size: auto;
+    display: flex;
+    align-items: center;
+    position: static;
   }
 
   .nav-links a {
     display: inline-block;
     padding: 15px 20px;
+    flex: 1;
   }
 
   .hamburger {
     display: none;
   }
+}
+
+
+.dynamic-fixed-footer {
+  min-block-size: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
