--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -8,6 +8,12 @@ const { frontmatter } = Astro.props;
   <p>著者: {frontmatter.author}</p>
   <p>{frontmatter.description}</p>
   <img src={frontmatter.image.url} width="200" alt={frontmatter.image.alt}>
+  <div class="tags">
+    {frontmatter.tags.map((tag) => (
+      <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
+    ))}
+  </div>
+
   <slot />
 </BaseLayout>
 
@@ -15,5 +21,20 @@ const { frontmatter } = Astro.props;
   p {
     font-size: 16px;
     line-height: 2;
+  }
+
+  .tags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0 16px;
+  }
+
+  .tag {
+    border: dotted 1px #cbdceb;
+    border-radius: .5em;
+    padding: .5em 1em;
+    font-size: 16px;
+    background-color: #F8FCFD;
+    margin-block: 16px;
   }
 </style>
