Feat: Finish Tutorial

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@ const identity = {
 const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "ドキュメントの執筆"];
 
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
 ---
 
@@ -40,7 +40,7 @@ const goal = 3;
   </ul>
   {happy && <p>I am happy to be learning Astro! Astroを学べて幸せです！</p>}
 
-  {finished && <p>I finished this tutorial! このチュートリアルを終えました！</p>}
+  {finished && <p><strong>I finished this tutorial! </strong>このチュートリアルを終えました！</p>}
 
   {goal === 3 ? <p>My goal is to finish in 3 days. 3日で終えるのが目標です。</p> : <p>My goal is not 3 days. 3日が目標ではありません。</p>}
 </BaseLayout>
