--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 /*
   サイト全体にスタイルを適用
 */
@@ -112,4 +117,11 @@ a {
   min-block-size: 100%;
   display: grid;
   grid-template-rows: auto 1fr auto;
+}
+
+
+@layer base {
+  :root {
+    --radius: 0.5rem;
+  }
 }
