--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -4,7 +4,8 @@ const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout pageTitle={frontmatter.title}>
-  <p>投稿日: {frontmatter.pubDate.toString().slice(0,10)}</p>
+  <p>投稿日: {frontmatter.pubDate.toLocaleDateString()}</p>
+  <!-- <p>投稿日: {frontmatter.pubDate.toString().slice(0,10)}</p> -->
   <p>著者: {frontmatter.author}</p>
   <p>{frontmatter.description}</p>
   <img src={frontmatter.image.url} width="200" alt={frontmatter.image.alt}>
