--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,36 +1,34 @@
 ---
-import '@acab/reset.css';
+// import '@acab/reset.css';
 import '../styles/global.css';
 // Supports weights 100-900
 import '@fontsource-variable/noto-sans-jp';
+import '@fontsource/sawarabi-gothic';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
 const { pageTitle } = Astro.props;
 ---
-
+<!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <title>{ pageTitle }</title>
   </head>
-  <body class="dynamic-fixed-footer">
+  <body class="container-fluid">
     <Header />
 
-    <main>
-      <h1>{pageTitle}</h1>
+    <main class="container-md py-5 px-3">
 
       <slot />
 
     </main>
 
-    <Footer />
-
-    <script>
-      import "../scripts/menu.js";
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous" defer></script>
   </body>
 </html>
