--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,114 +2,36 @@
   サイト全体にスタイルを適用
 */
 
-html {
-  block-size: 100%;
-}
-html.dark {
-  background-color: #0d0950;
-  color: #fff;
+:root {
+  --color-primary: #4335a7;
+  --color-secondary: #80c4e9;
+  --color-tertiary: #fff6e9;
+  --color-accent: #ff7f3e;
 }
 
-.dark .nav-links a {
-  color: #fff;
+html {
+  block-size: 100dvh;
 }
 
 body {
-  color: #333;
-  font-family: 'Noto Sans JP Variable', sans-serif;
+  color: var(--color-primary);
+  font-family: 'Sawarabi Gothic', sans-serif;
   font-size: 17px;
   line-height: 1.6;
-  background-color: #f3f3e0;
+  background-color: var(--color-secondary);
+  min-block-size: 100%;
   inline-size: min(100% - 1rem, 80ch);
   margin-inline: auto;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  color: #133e87;
-  margin-block-end: 2rem;
+h1,
+h2 {
+  color: var(--color-primary);
+  user-select: none;
 }
 
-h1 {
-  font-size: 2.5rem;
-  margin: 1rem 0;
-}
-
-main {
-  padding-block: 24px;
-}
-
-a {
-  color: #608bc1;
-}
-
-
-/* ナビゲーションのスタイル */
-.hamburger {
-  padding-right: 20px;
-  cursor: pointer;
-}
-
-.hamburger .line {
-  display: block;
-  width: 40px;
-  height: 5px;
-  margin-bottom: 10px;
-  background-color: #ff9776;
-}
-
-.nav-links {
-  width: 100%;
-  top: 5rem;
-  left: 48px;
-  background-color: #ff9776;
-  display: none;
-  margin: 0;
-}
-
-.nav-links a {
-  font-size: 18px;
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-  padding-block: 12px;
-  display: block;
-  transition: all 130ms ease-in-out;
-}
-
-.nav-links a:hover,
-.nav-links a:focus {
-  color: #f3f3e0;
-  background-color: #608bc1;
-}
-
-.expanded {
-  display: unset;
-}
-
-@media screen and (min-width: 636px) {
-  .nav-links {
-    background: none;
-    inline-size: auto;
-    display: flex;
-    align-items: center;
-    position: static;
+@media (any-hover: hover) {
+  button {
+    cursor: pointer;
   }
-
-  .nav-links a {
-    display: inline-block;
-    padding: 15px 20px;
-    flex: 1;
-  }
-
-  .hamburger {
-    display: none;
-  }
-}
-
-
-.dynamic-fixed-footer {
-  min-block-size: 100%;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
 }
