Fix: Change Color
カラーの変更

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,6 +17,6 @@ const pageTitle = "音声入力WEBアプリ";
 
 <style>
   header {
-    border-block-end: solid 1px var(--color-tertiary);
+    border-block-end: solid 1px var(--color-secondary);
   }
 </style>
