--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,7 @@ body {
   font-family: 'Sawarabi Gothic', sans-serif;
   font-size: 17px;
   line-height: 1.6;
-  background-color: var(--color-secondary);
+  background-color: var(--color-tertiary);
   min-block-size: 100%;
   inline-size: min(100% - 1rem, 80ch);
   margin-inline: auto;
