Feat: Add Lead Text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,8 @@ const pageTitle = "音声入力WEBアプリ";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
+  <p class="fs-5">音声入力をご利用いただくには、ブラウザのマイク設定を許可してください。</p>
+
   <VoiceInput />
 
   <TextDisplay />
