Feat: Implement the reset button

--- a/src/components/CopyButton.astro
+++ b/src/components/CopyButton.astro
@@ -5,7 +5,7 @@
 <button
   type="button"
   id="copyButton"
-  class="btn btn-outline-primary">
+  class="btn btn-outline-primary btn-lg">
   <span class="bi bi-clipboard" role="img" aria-hidden="true"></span>
   <span>コピー</span>
 </button>
