--- a/src/components/SpeechSynthesis.astro
+++ b/src/components/SpeechSynthesis.astro
@@ -4,7 +4,7 @@
 
 <button
   type="button"
-  class="btn btn-outline-primary"
+  class="btn btn-outline-primary btn-lg"
   id="startSpeech">
   <span class="bi bi-volume-up" role="img" aria-hidden="true"></span>
   <span>音声読み上げ</span>
