--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,16 +1,15 @@
 ---
-import Hamburger from './Hamburger.astro';
-import Navigation from './Navigation.astro';
-import ThemeIcon from './ThemeIcon.astro';
-
-const pageTitle = "音声入力WEBアプリ";
+const pageTitle = "オトテキ";
 ---
 
 
 <header class="container-md py-4 px-3">
   <div class="row">
     <div class="col">
-      <h1 class="fw-bold mb-0">{ pageTitle }</h1>
+      <p class="fs-6 title-secondary mb-0">音声入力WEBアプリ</p>
+      <h1 class="display-2 fw-bold mb-0">
+        { pageTitle }
+      </h1>
     </div>
   </div>
 </header>
@@ -18,5 +17,9 @@ const pageTitle = "音声入力WEBアプリ";
 <style>
   header {
     border-block-end: solid 1px var(--color-secondary);
+  }
+
+  .title-secondary {
+    color: var(--color-secondary);
   }
 </style>
