--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import SpeechSynthesis from '../components/SpeechSynthesis.astro';
 import CopyButton from '../components/CopyButton.astro';
 import Alert from '../components/Alert .astro';
 
-const pageTitle = "音声入力WEBアプリ";
+const pageTitle = "オトテキ";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
